--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h3>
 <a id="pyhiit" class="anchor" href="#pyhiit" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>PyHIIT</h3>
 
-<p>This program was originally created for my fiance to use at home to assist in HIIT training.
+<p>This program was originally created for my fiancé to use at home to assist in HIIT training.
 We thought it would be a good idea to add it to Github to share it with anyone else wanting a similar
 experience. </p>
 
