--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@ experience. </p>
 
 <p>When running application you will be asked the following:</p>
 
-<p>Warmup (This is your warmup time you would like to have before starting your exercises)
-Active (This is your active time during your HIIT training)
-Rest (This is your resting time during your HIIT training)
-Cooldown (The amount of time needed/wanted for cooling off)
-Exercises (The amount of exercises part of your HIIT workout)
+<p>Warmup (This is your warmup time you would like to have before starting your exercises)<br>
+Active (This is your active time during your HIIT training)<br>
+Rest (This is your resting time during your HIIT training)<br>
+Cooldown (The amount of time needed/wanted for cooling off)<br>
+Exercises (The amount of exercises part of your HIIT workout)<br>
 Set (The amount of sets you would like to run your exercises)</p>
 
 <p>All input is in seconds and not minutes eg:</p>
